# alpha-gate

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
containers/cloud-run/: Dockerfile
containers/cloud-run/package/alpha_gate/: __init__.py
containers/cloud-run/package/alpha_gate/executors/: __init__.py
containers/sandbox/: Dockerfile
docs/: CLOUD_RUN_BROKER.md
docs/adr/: 0001-python-strategies-and-sandbox-executors.md  0002-windowed-program-backtests-and-scoring.md  0003-cumulative-local-evolution-and-ledger.md  0004-cloud-run-nested-sandbox-broker.md
examples/: seed_strategy.py
reports/: cloud_run_parity_v0_1.md  local_baseline_v0_1.json  local_baseline_v0_1.md  local_baseline_v0_2.json  local_baseline_v0_2.md
scripts/: check_repository_hygiene.py
src/alpha_gate/: __init__.py  backtest.py  candidate.py  cli.py  constants.py  evaluator.py  experiment.py  ledger.py  protocol.py  scoring.py  summary.py
src/alpha_gate/cloud/: __init__.py  service.py
src/alpha_gate/evolution/: __init__.py  base.py  local.py
src/alpha_gate/executors/: __init__.py  base.py  cloud_run.py  cloud_sandbox.py  container.py  process.py
src/alpha_gate/runtime/: __init__.py  worker.py
tests/: __init__.py  conftest.py  executor_contract.py  test_backtest.py  test_candidate.py  test_cli.py  test_cloud_run_executor.py  test_cloud_run_integration.py  test_cloud_sandbox_executor.py  test_cloud_service.py  test_container_executor.py  test_container_integration.py  test_experiment.py  test_local_evolver.py  test_program_scoring.py  test_protocol.py  test_seed_strategy.py  test_worker.py
